
[build-system]

requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"


[project]

name = "telethon-utils"
version = "0.1.0"
description = "Some functions to use the telethon with bulk clients"

authors = [
    {name = "Rune Tech", email = "runetech2024@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "telethon",
    "proxy-reader"
]

requires-python = ">= 3.11"
keywords = ["telethon", "utils", "utilities", "easy", "bulk"]


[project.urls]

Homepage = "https://github.com/runetech0/telethon-utils"
github = "https://github.com/runetech0/telethon-utils"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"telethon_utils/__init__.py" = [
    "{version}",
]

